--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Top Navigation Bar -->
   <div class="top-nav">
     <div class="logo">
-      <img src="imagesandicons/TestLogo.png" alt="Logo" height="30" />
+      <img src="TestLogo.png" alt="Logo" height="30" />
     </div>
     
     <!-- Navigation Links -->
@@ -28,7 +28,7 @@
 
     <!-- Profile Section -->
     <div class="profile">
-      <img id="doctor-image" src="imagesandicons/senior-woman-doctor-and-portrait-smile-for-health-2023-11-27-05-18-16-utc.png" alt="Dr. Jose Simmons" height="40" style="border-radius: 50%;" />
+      <img id="doctor-image" src="senior-woman-doctor-and-portrait-smile-for-health-2023-11-27-05-18-16-utc.png" alt="Dr. Jose Simmons" height="40" style="border-radius: 50%;" />
       <div>
         <strong id="doctor-name">Dr. Jose Simmons</strong><br />
         <small id="doctor-role">General Practitioner</small>
